--- a/app.css
+++ b/app.css
@@ -41,6 +41,12 @@ a:hover {
     margin: 0 auto;
 }
 
+.header {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: var(--main-grey);
+}
+
 /*-------------------------*/
 /*NAV BAR                  */
 /*-------------------------*/
@@ -81,12 +87,6 @@ a:hover {
     /* BOX SHADOW FORMAT: HORIZONTAL VAL (+ RIGHT, - LEFT), VERTICAL VAL (+ DOWN, - UP), BLUR VAL (+ OUTWARDS, - INWARD), COLOR */
     padding: 40px 20px 20px 20px;
     margin: 10px;
-}
-
-.panel-heading {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: var(--main-grey);
 }
 
 /*-------------------------*/
